--- a/index.html
+++ b/index.html
@@ -6,11 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/src/js/main.js"></script>
+    <link rel="stylesheet" href="../src/css/reset.css">
+    <link rel="stylesheet" href="../src/css/main.css">
+    <script defer src="../src/js/main.js"></script>
 </head>
 
 <body>
-    <p>git hub page</p>
+    <div class="wrapper">
+        <div class="header">
+            <nav>
+                <div class="left">
+                    <div class="home">
+                        <a href="/">메인</a>
+                    </div>
+                </div>
+                <div class="right"></div>
+            </nav>
+        </div>
+        <div class="content">
+            <!-- item title -->
+            <div class="title__box">
+                <h1>대회</h1>
+            </div>
+            <div class="search__box">
+                <input type="text" placeholder="검색">
+            </div>
+            <!-- item list -->
+            <ul class="item__box">
+                <div class="item">
+                    <div class="top">
+                        <div class="title">
+                            <span class="ellipsis">CSI 2024(Camp Swing It)</span>
+                        </div>
+                        <div class="d_day">
+                            <span>D-56</span>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        <div class="date">
+                            <div class="start">2024/04/05</div>
+                            <span>~</span>
+                            <div class="end">2024/04/07</div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
