--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- item list -->
             <ul class="main__list">
                 <li>
-                    <a href="/fest/main.html">행사</a>
+                    <a href="/snowball/fest/main.html">행사</a>
                 </li>
                 <li>
                     <a href="/">(준비중)</a>
