--- a/fest/main.html
+++ b/fest/main.html
@@ -18,7 +18,7 @@
             <nav>
                 <div class="left">
                     <div class="home">
-                        <a href="/">메인</a>
+                        <a href="/snowball">메인</a>
                     </div>
                 </div>
                 <div class="right"></div>
