--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <div class="left">
                     <div class="home">
-                        <a href="/">메인</a>
+                        <a href="/snowball">메인</a>
                     </div>
                 </div>
                 <div class="right"></div>
@@ -38,10 +38,10 @@
                     <a href="/snowball/fest/main.html">행사</a>
                 </li>
                 <li>
-                    <a href="/">(준비중)</a>
+                    <a href="/snowball">(준비중)</a>
                 </li>
                 <li>
-                    <a href="/">(준비중)</a>
+                    <a href="/snowball">(준비중)</a>
                 </li>
             </ul>
         </div>
